# pcs_2026

./: Es_01.txt
Esercitazione_01/: CMakeLists.txt
Esercitazione_01/build_01/: Algoritmo_es01.cpp  CMakeCache.txt  Makefile  Media  cmake_install.cmake
Esercitazione_02/: CMakeLists.txt  Mie_considerazioni.txt
Esercitazione_02/Build2/: CMakeCache.txt  Esercizio2.cpp  Makefile  Prova_02.cpp  Stampa2  cmake_install.cmake  ppp
Esercitazione_03/: CMakeLists.txt
Esercitazione_03/build3/: .Prova.cpp.swp  CMakeCache.txt  Main.cpp  Makefile  Run  cmake_install.cmake  rational.hpp
Esercitazione_04/: CMakeLists.txt
Esercitazione_04/Build_04/: Bubble.h  CMakeCache.txt  CTestTestfile.cmake  Insertion.h  Makefile  RUN  Run_Bub  Run_Ins  Run_Sel  Selection.h  cmake_install.cmake  is_sorted.h  measure.cpp  test_bubble.cpp  test_insertion.cpp  test_selection.cpp
Esercitazione_04/Build_04/Testing/Temporary/: CTestCostData.txt
Esercitazione_05/: CMakeLists.txt  Insertion.h  MergeSort.h  QuickSort.h  misure.cpp  testMergeSort.cpp  testQuickSort.cpp
Esercitazione_05/build05/: CMakeCache.txt  CTestTestfile.cmake  Makefile  RUN_Merge  RUN_Misure  RUN_Quick  cmake_install.cmake
Esercitazione_05/build05/Testing/Temporary/: CTestCostData.txt
Esercitazione_06/: CMakeLists.txt  main.cpp  unidirected_edge.hpp  unidirected_graph.hpp
Esercitazione_06/build_06/: CMakeCache.txt  CTestTestfile.cmake  Makefile  RUN  cmake_install.cmake
Esercitazione_06/build_06/Testing/Temporary/: CTestCostData.txt
