cmake_minimum_required(VERSION 3.20)
project(esercitazione6)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wshadow -Werror=vla -Wno-sign-compare")

set(SRC_tc main.cpp)
add_executable(RUN ${SRC_tc})
add_test(NAME TEST COMMAND RUN)

enable_testing()